# iguanair

./: .gitignore  Makefile  iguanair_0.1.d1a3474-1.debian.tar.xz  iguanair_0.1.d1a3474-1.dsc  iguanair_0.1.d1a3474-1_source.build  iguanair_0.1.d1a3474-1_source.changes
usb_ir/: AUTHORS  Make.settings.in  Makefile.in  README.txt  client-interface.c  client-interface.h  client.c  compat.h  config.h.in  configure  daemon.c  driver.c  driver.h  driverapi.h  iguanaIR.c  iguanaIR.h  server.c  server.h  setup.py.in  support.c  support.h
usb_ir/autoconf/: ac_pkg_swig.m4  ac_python_devel.m4  configure.ac
usb_ir/darwin/: Makefile.in  README-Darwin.txt  daemon-darwin.c  net.iguanaworks.igdaemon.plist.in
usb_ir/drivers/: Makefile.in  libusb.c  libusbpre1.c
usb_ir/osx/: Makefile.in  README-OSX.txt
usb_ir/packaging/: Makefile.in
usb_ir/reflasher/: Makefile.in
usb_ir/scripts/: Makefile.in  mode2-translator.in  send-loop.in  serial-test.in
usb_ir/utils/: Makefile.in  clearID.in  igmkcode.c  record-sends.in  writeLCD.in
usb_ir/win32/: usb_ir.vcproj
usb_ir/win32/popt/: popt-fix.c  popt-fix.h  popt.h  poptint.h
